manh up logic trả hàng

--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -58,17 +58,17 @@
                             </div>
                             <div class="col-sm-7">
                                 <div class="mb-2">
-                                    <span th:text="${billProduct?.product.name}"></span></div>
+                                    <span th:text="${billProduct?.product.nameProduct}"></span></div>
                                 <div class="mb-2">
                                     <span>Số lượng: [(${billProduct.quantity})]</span></div>
                             </div>
                             <div class="col-sm-3 text-end">
                                 <div>
-                                    <span class="text-strike-through">[(${#numbers.formatDecimal(billProduct.product.price_export,0,'COMMA',0,'POINT')})]</span>
+                                    <span class="text-strike-through">[(${#numbers.formatDecimal(billProduct.product.priceExport,0,'COMMA',0,'POINT')})]</span>
                                     <span class="fs-tiny text-decoration-underline">đ</span>
                                 </div>
                                 <div>
-                                    <span>[(${#numbers.formatDecimal(billProduct.product.price_export,0,'COMMA',0,'POINT')})]</span>
+                                    <span>[(${#numbers.formatDecimal(billProduct.product.priceExport,0,'COMMA',0,'POINT')})]</span>
                                     <span class="fs-tiny text-decoration-underline">đ</span>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                                         </td>
                                                         <td>
                                                             <input type="text" th:name="productName"
-                                                                   th:value="${billProduct.product.name}">
+                                                                   th:value="${billProduct.product.nameProduct}">
                                                         </td>
                                                         <td>
                                                             <input type="number" class="quantityReturn" value="0"
