--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -124,7 +124,7 @@
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
-                                      style="font-size: 60%">+9 </span>
+                                      style="font-size: 60%">[(${session.list==null?0:#lists.size(session.list)})]</span>
                             </span>
                         </a>
                     </li>
