--- a/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
@@ -177,10 +177,10 @@
                     <div class="card shadow-none bg-transparent border border-secondary mb-3">
                         <div class="card-header">
                             <div class="card-body">
-                                <p class="card-text">Subtotal: <span style="padding-left: 70px">$<span
+                                <p class="card-text">Subtotal: <span class="text-end" style="color: #f67a7a">$<span
                                         class="total-pro"></span> </span></p>
-                                <p class="card-text">Total: <span style="padding-left: 90px">$<span
-                                        th:text="${amount}"></span> </span></p>
+                                <p class="card-text">Total: <span class="text-end" style="color: red">$<span
+                                        class=""></span> </span></p>
                                 <div style="text-align: center">
                                     <a type="submit" class="btn btn-primary" th:href="@{/pay}">Thanh
                                         Toán
