--- a/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
@@ -1,73 +1,73 @@
-<h4 class="fw-semibold py-3 mb-4"> Danh sách Voucher</h4>
-<form th:action="@{/admin/evaluate/add}" method="post" th:object="${evaluate}">
-    <div class="row justify-content-end me-4">
-        <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
-            <i class='tf-icon bx bx-plus-medical'></i> Add Evaluate
-        </button>
-    </div>
-    <div class="mb-4">
-        <div class="modal fade" th:id="largeModal" tabindex="-1"
-             aria-hidden="true">
-            <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Thông tin Evaluate</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="row col-lg-12 col-xl-9">
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Customer:</label>
-                                        <br>
-                                        <select th:name="customer" class="form-select"
-                                                aria-label="Default select example">
-                                            <option th:each="i:${listCustomer}" th:value="${i.id}"
-                                                    th:text="${i.name}"></option>
-                                        </select>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label class="form-label">Product:</label>
-                                        <br>
-                                        <!--                                        <select th:name="product"class="form-select" aria-label="Default select example">-->
-                                        <!--                                            <option th:each="i:${listProduct}" th:value="${i.id}"-->
-                                        <!--                                                    th:text="${i.name}"></option>-->
-                                        <!--                                        </select>-->
-                                    </div>
-                                </div>
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Date Create</label>
-                                        <input type="date" class="form-control" th:name="dateCreate">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label class="form-label">Point</label>
-                                        <input class="form-control" type="text" th:name="point">
-                                    </div>
-                                </div>
-                                <div class="col-xl-4 col-lg-6 col-md-6">
-                                    <div class="mb-3">
-                                        <label class="form-label">Comment</label>
-                                        <textarea name="comment" cols="30" rows="0" th:name="comment"
-                                                  class="form-control"></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset
-                        </button>
-                        <button type="submit" class="btn btn-primary" onclick="return confirm('Xác nhận thêm')">Save
-                            changes
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</form>
+<h4 class="fw-semibold py-3 mb-4"> Danh sách đánh giá</h4>
+<!--<form th:action="@{/admin/evaluate/add}" method="post" th:object="${evaluate}">-->
+<!--    <div class="row justify-content-end me-4">-->
+<!--        <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">-->
+<!--            <i class='tf-icon bx bx-plus-medical'></i> Add Evaluate-->
+<!--        </button>-->
+<!--    </div>-->
+<!--    <div class="mb-4">-->
+<!--        <div class="modal fade" th:id="largeModal" tabindex="-1"-->
+<!--             aria-hidden="true">-->
+<!--            <div class="modal-dialog modal-xl" role="document">-->
+<!--                <div class="modal-content">-->
+<!--                    <div class="modal-header">-->
+<!--                        <h5 class="modal-title">Thông tin Evaluate</h5>-->
+<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--                    </div>-->
+<!--                    <div class="modal-body">-->
+<!--                        <div class="row">-->
+<!--                            <div class="row col-lg-12 col-xl-9">-->
+<!--                                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label class="form-label">Customer:</label>-->
+<!--                                        <br>-->
+<!--                                        <select th:name="customer" class="form-select"-->
+<!--                                                aria-label="Default select example">-->
+<!--                                            <option th:each="i:${listCustomer}" th:value="${i.id}"-->
+<!--                                                    th:text="${i.name}"></option>-->
+<!--                                        </select>-->
+<!--                                    </div>-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label class="form-label">Product:</label>-->
+<!--                                        <br>-->
+<!--                                        &lt;!&ndash;                                        <select th:name="product"class="form-select" aria-label="Default select example">&ndash;&gt;-->
+<!--                                        &lt;!&ndash;                                            <option th:each="i:${listProduct}" th:value="${i.id}"&ndash;&gt;-->
+<!--                                        &lt;!&ndash;                                                    th:text="${i.name}"></option>&ndash;&gt;-->
+<!--                                        &lt;!&ndash;                                        </select>&ndash;&gt;-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label class="form-label">Date Create</label>-->
+<!--                                        <input type="date" class="form-control" th:name="dateCreate">-->
+<!--                                    </div>-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label class="form-label">Point</label>-->
+<!--                                        <input class="form-control" type="text" th:name="point">-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label class="form-label">Comment</label>-->
+<!--                                        <textarea name="comment" cols="30" rows="0" th:name="comment"-->
+<!--                                                  class="form-control"></textarea>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="modal-footer">-->
+<!--                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Reset-->
+<!--                        </button>-->
+<!--                        <button type="submit" class="btn btn-primary" onclick="return confirm('Xác nhận thêm')">Save-->
+<!--                            changes-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
 <div class="card mb-3 ">
     <div class="card-header">
         <form class="col-12 mt-2">
@@ -78,11 +78,11 @@
                         <i class="bx bx-search"></i>
                     </span>
                         <input type="text" class="form-control" placeholder="Tìm tên, sđt">
-                        <button class="btn btn-primary" type="button">Search</button>
+                        <button class="btn btn-primary" type="button">Tìm kiếm</button>
                     </div>
                 </div>
                 <div class="col-1">
-                    <button class="btn btn-warning" data-bs-toggle="tooltip" data-bs-offset="0,4"
+                    <button class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-offset="0,4"
                             data-bs-placement="bottom" data-bs-html="true" title=""
                             data-bs-original-title="<span>Reset filter</span>" aria-describedby="tooltip91262">
                         <i class='bx bx-reset'></i>
@@ -109,7 +109,6 @@
             </div>
         </div>
         <hr>
-
         <div class="table-responsive text-nowrap">
             <table class="table table-hover overflow-hidden">
                 <thead>
