--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -2,7 +2,7 @@
     <span class="text-muted fw-light">Sản phẩm/</span> Danh sách sản phẩm
 </h4>
 <div class="mb-3">
-    <a type="button" class="btn btn-outline-secondary" href="/admin/product/add-product">Thêm sản phẩm</a>
+    <a type="button" class="btn btn-secondary" href="/admin/product/add-product">Thêm sản phẩm</a>
 </div>
 <div class="card">
     <div class="card-body">
@@ -11,20 +11,20 @@
             <tr class="fw-semibold">
                 <th>#</th>
                 <th>Sản phẩm</th>
-                <th>Số lượng</th>
-                <th>Giá nhập</th>
-                <th>Giá bán</th>
+                <th>Sku</th>
+                <th>Điểm trung bình</th>
+                <th>Mã tương tự</th>
                 <th>Trạng thái</th>
                 <th>Thao tác</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product,productStat:${listProductDetail.content}">
+            <tr th:each="product,productStat:${listProductDetail}">
                 <td th:text="${productStat.index+1}"></td>
                 <td th:text="${product.nameProduct}"></td>
-                <td th:text="${product.quantity}"></td>
-                <td th:text="${#numbers.formatDecimal(product.priceImport,0,'COMMA',0,'POINT')}"></td>
-                <td th:text="${#numbers.formatDecimal(product.priceExport,0,'COMMA',0,'POINT')}"></td>
+                <td th:text="${product.sku}"></td>
+                <td th:text="${product.avgPoint}"></td>
+                <td th:text="${product.same}"></td>
                 <td class="form-switch text-center"><input class="form-check-input" type="checkbox" th:checked="${product.active}"></td>
                 <td>
                     <div class="dropdown">
