--- a/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
@@ -3,6 +3,7 @@
 
     <div class="container-xxl flex-grow-1 container-p-y">
         <div class="row">
+            <div class="col-lg-2 mb-4 order-0"></div>
             <div class="col-lg-8 mb-4 order-0">
                 <div class="card">
                     <div class="d-flex align-items-end row">
@@ -53,6 +54,7 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-2 mb-4 order-0"></div>
         </div>
     </div>
     <!-- / Content -->
